style: add style file

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="app-loading-item4"></div>
           <div class="app-loading-item5"></div>
         </div>
-        <div class="app-loading-title">vue3-element-plus-admin</div>
+        <div class="app-loading-title">Vue3-Element-Admin</div>
       </div>
     </div>
   </div>
